--- a/index.html
+++ b/index.html
@@ -38,5 +38,39 @@
         </div>
     </div>
 
+    <!-- Category section -->
+
+      <section class="w-11/12 mx-auto m-10 ">
+        <h1 class="text-center font-semibold text-3xl mb-10">Choose Your Trees</h1>
+        <div class="flex justify-around md:flex-row flex-col space-y-10 space-x-5">
+            <!-- category section -->
+            <div id="category-container" class=" w-[15%] ">
+                <h1 class="mb-5 font-semibold text-xl">Categories</h1>
+                <button class="  hover:bg-[#15803D] hover:text-white w-full cursor-pointer font-[400] rounded-xl text-left p-2">All Trees</button>
+            </div>
+
+            <!-- card section -->
+            <div class="grid md:grid-cols-3 gap-6  space-y-10 col-span-1">
+                <div class="space-y-5 w-[350px] h-full ">
+                    <img class="h-60 w-full " src="./assets/about.png" alt="">
+                    <h1>Mango Tree</h1>
+                    <p>A fast-growing tropical tree that produces delicious, juicy mangoes during summer. Its dense green</p>
+                    <div class="flex justify-between">
+                        <button class="btn  rounded-3xl bg-[#DCFCE7]">Fruit Tree</button>
+                        <h3>৳500</h3>
+                    </div>
+                    <button class="btn bg-[#15803D] text-white w-full rounded-3xl">Add to Cart</button>
+                </div> 
+            </div>
+
+            <!-- add to cart section -->
+            <div class="w-[15%] shadow-xl">
+                <p class="px-4">Your Cart</p>
+            </div>
+        </div>
+      </section>
+
+
+<script src="./js/index.js"></script>
 </body>
 </html>
