--- a/index.html
+++ b/index.html
@@ -14,14 +14,30 @@
     
 <!-- Navber section -->
  <header class="bg-[#15803D] py-5 flex justify-around items-center">
+    <!-- dropdown section -->
+      <div class="dropdown md:hidden">
+      <div tabindex="0" role="button" class="btn btn-ghost text-white btn-circle">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"> <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" /> </svg>
+      </div>
+      <ul
+        tabindex="0"
+        class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
+        <li><a>About</a></li>
+        <li><a>Gallery</a></li>
+        <li><a>Plant a Tree</a></li>
+      </ul>
+    </div>
+    <!-- medium device section -->
+     
     <h1 class="font-bold text-white text-[18px]">Green Earth</h1>
-    <div class="text-white md:space-x-5 ">
+    <div class="text-white md:space-x-5 md:block hidden ">
         <a class="hover:border-b-2 hover:border-gray-300" href="">About</a>
         <a class="hover:border-b-2 hover:border-gray-300" href="">Gallery</a>
         <a class="hover:border-b-2 hover:border-gray-300" href="">Plant a Tree</a>
     </div>
     <button class="btn btn-outline border-none rounded-3xl bg-[#facc15]">Plant a Tree</button>
  </header>
+
 
 <!-- Hero section -->
     <div class="parent-div flex md:flex-row justify-around bg-[#CFF0DC] items-center px-6 flex-col space-y-10 md:space-y-0">
