added the cart section work

--- a/index.html
+++ b/index.html
@@ -67,13 +67,19 @@
             </div>
 
             <!-- card section -->
-            <div id="card-container" class="grid md:grid-cols-3 gap-6  space-y-10 col-span-1">
+            <div id="card-container" class="grid md:grid-cols-3 items-center justify-center gap-6 col-span-1">
             </div>
 
             <!-- add to cart section -->
-            <div class="w-[15%] shadow-xl">
-                <p class="px-4">Your Cart</p>
+            <div class="w-[15%] shadow-xl  rounded-xl p-3">
+                <p class="px-4 font-semibold text-lg">Your Cart</p>
+                <div id="cart-section">
+                
             </div>
+             <div class="flex justify-between mt-5">
+                      <div class="font-semibold">Total : </div>
+                      <div><span class="text-xl">৳</span><span id="total">0</span></div>
+                    </div>
         </div>
       </section>
 
