--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
 
             <!-- add to cart section -->
-            <div class="w-[15%] shadow-xl  rounded-xl p-3">
+            <div class="md:w-[15%] w-full shadow-xl  rounded-xl p-3">
                 <p class="px-4 font-semibold text-lg">Your Cart</p>
                 <div id="cart-section">
                 
