--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <!-- medium device section -->
      
-    <h1 class="font-bold text-white text-[18px]">Green Earth</h1>
+    <h1 class="font-bold text-white text-[18px]"><span class="text-green-500"><i class="fa-solid fa-tree"></i></span> Green Earth</h1>
     <div class="text-white md:space-x-5 md:block hidden ">
         <a class="hover:border-b-2 hover:border-gray-300" href="">About</a>
         <a class="hover:border-b-2 hover:border-gray-300" href="">Gallery</a>
@@ -54,6 +54,11 @@
             <img src="./assets/hero-leaf2.png" alt="">
         </div>
     </div>
+
+    <!-- Loading spinners section -->
+     <section id="spinner" class="flex justify-center items-center py-10 hidden">
+      <span class="loading loading-infinity loading-xl"></span>
+     </section>
 
     <!-- Category section -->
 
@@ -101,7 +106,24 @@
   </div>
 </dialog>
 
+<!-- Campaign section -->
+ <section class="max-w-[890px] h-[80vh] mx-auto">
+  <h1 class="text-center font-bold text-3xl mb-20">About the Campaign</h1>
 
+  <div class="flex flex-col md:flex-row items-center gap-10 ">
+    <div >
+        <img  class="w-[400px] h-[400px]" src="./assets/about.png" alt="">
+  </div>
+
+  <div class="px-6 md:px-0">
+     <p class="mb-7">Green Earth is a global tree plantation initiative dedicated to fighting <br> climate change. Since our start, we’ve planted over 500,000 trees <br> worldwide. By joining our campaign, you help restore forests, create <br> habitats for wildlife, and combat global warming.</p>
+
+    <li>Restoration of natural habitats</li>
+      <li>Improvement of air quality</li>
+      <li>Support for local communities</li>
+  </div>
+  </div>
+ </section>
 
 <script src="./js/index.js"></script>
 </body>
