added the impact section

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 </dialog>
 
 <!-- Campaign section -->
- <section class="max-w-[890px] h-[80vh] mx-auto">
+ <section class="max-w-[890px] min-h-[80vh] mx-auto">
   <h1 class="text-center font-bold text-3xl mb-20">About the Campaign</h1>
 
   <div class="flex flex-col md:flex-row items-center gap-10 ">
@@ -123,6 +123,26 @@
       <li>Support for local communities</li>
   </div>
   </div>
+ </section>
+
+ <!-- Impact section -->
+
+ <section class="py-20 bg-[#CFF0DC] flex flex-col justify-center items-center mt-10">
+    <h1 class="text-3xl font-semibold">Our Impact</h1>
+     <div class="flex flex-wrap justify-center gap-6 mt-[50px]">
+          <div class="md:w-[500px] w-[400px] h-[156px] bg-white text-center rounded-2xl">
+                <h1 class="mt-12 font-semibold text-2xl text-[#15803D] mb-1">500K+</h1>
+                <p>Trees Planted</p>
+          </div>
+          <div class="md:w-[500px] w-[400px] h-[156px] bg-white text-center rounded-2xl">
+                <h1 class="mt-12 font-semibold text-2xl text-[#15803D] mb-1">120+</h1>
+                <p>Communities Involved</p>
+          </div>
+          <div class="md:w-[500px] w-[400px] h-[156px] bg-white text-center rounded-2xl">
+                <h1 class="mt-12 font-semibold text-2xl text-[#15803D] mb-1">30+</h1>
+                <p>Countries Reached</p>
+          </div>
+          </div>
  </section>
 
 <script src="./js/index.js"></script>
