added all responsive things is ok

--- a/index.html
+++ b/index.html
@@ -145,6 +145,27 @@
           </div>
  </section>
 
+ <!-- Form section -->
+
+ <section class="bg-[#166534] py-15">
+        <h1 class="text-3xl text-center text-white mb-6">Plant a Tree Today</h1>
+        <div class="md:w-[650px] h-[300px] bg-[#15803D] mx-auto rounded-xl shadow-lg text-center space-y-2">
+          <input type="text" placeholder="Your Name" class="input input-md mt-16  w-[80%]" /><br>
+          <input type="email" placeholder="Your Email Address" class="input input-md  w-[80%]" /><br>
+            <input type="text" class="input  w-[80%]" placeholder="Number of Trees" list="browsers" />
+              <datalist id="browsers">
+              <option value="number1">0170000000</option>
+              <option value="number2">0170000000</option>
+              <option value="number3">0170000000</option>
+             </datalist> <br>
+             <button class="btn btn-outline border-none rounded-3xl bg-[#facc15] w-[80%] mt-2">Donate Now</button>
+        </div>
+ </section>
+<!-- Footer section -->
+ <footer class="h-[9vh] bg-[#14532D] flex justify-center items-center">
+   <h2 class="text-white md:text-[15px] text-sm">© 2025 Green Earth. All Rights Reserved.</h2>
+ </footer>
+
 <script src="./js/index.js"></script>
 </body>
 </html>
