added the outline section

--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
  <section class="bg-[#166534] py-15">
         <h1 class="text-3xl text-center text-white mb-6">Plant a Tree Today</h1>
         <div class="md:w-[650px] h-[300px] bg-[#15803D] mx-auto rounded-xl shadow-lg text-center space-y-2">
-          <input type="text" placeholder="Your Name" class="input input-md mt-16  w-[80%]" /><br>
-          <input type="email" placeholder="Your Email Address" class="input input-md  w-[80%]" /><br>
-            <input type="text" class="input  w-[80%]" placeholder="Number of Trees" list="browsers" />
+          <input type="text" placeholder="Your Name" class="input input-md mt-16  w-[80%] focus:outline-none" /><br>
+          <input type="email" placeholder="Your Email Address" class="input input-md  w-[80%] focus:outline-none" /><br>
+            <input type="text" class="input  w-[80%] focus:outline-none" placeholder="Number of Trees" list="browsers" />
               <datalist id="browsers">
               <option value="number1">0170000000</option>
               <option value="number2">0170000000</option>
